Revision history for HTML::Accessors

0.1.47   14/11/2008
         - New approach to CPAN testing

0.1.45   24/10/2008
         - Tried to disable automated testing some more

0.1.42   17/10/2008
         - Disabled automated testing

         06/09/2008
         - Tweaked POD. Bumping release to fix broken CPAN Testers database.
         - Prevented smoke testing on perl 5.8.[123] since testers copy of
         - HTML::GenerateUtils is broken

         02/06/2008
         - Made version a build requirement

         23/05/2008
         - Added POD and POD coverage tests

